# amg-portal

./: .dockerignore  .gitignore  CLAUDE.md  PHASE 2 & 3 scope.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 04dc48f4efa6_add_user_model.py  0b71f652cf57_merge_multiple_heads.py  24d552ed8ba9_add_audit_log.py  24f7329b0cc1_sync_missing_schema.py  26c8826e1798_add_external_crm_id_to_client_profiles.py  45ff9a1104a8_merge_all_heads.py  52aacd4f3335_add_pg_trgm_search_indexes.py  612587a645d0_add_push_tokens_table.py  6bce34dcf2df_add_document_and_kyc_document.py  6e2b7519b293_add_deletion_requests.py  82526a45a2c4_add_document_and_kyc_document.py  88e9f4f03beaf79b2d44f_calendar_integration.py  8f6a47efa18a_add_program_brief_fields.py  90bfd38432e5_add_partner_assignment_deliverable.py  NAMING_CONVENTION.md  a1b2c3d4e5f6_add_client_profile_to_certificates.py  a3b4c5d6e7f8_add_communication_approval_fields.py  ab4b71a8d1a4_add_partner_capability_matrix.py  add_api_keys.py  add_approval_comments.py  add_assignment_acceptance_workflow.py  add_audit_chain_columns.py  add_audit_checkpoint.py  add_bookmarks.py  add_brief_pdf_path.py  add_budget_approval_routing.py  add_calendar_event_id.py  add_calendar_feed_tokens.py  add_calendar_integration_fields.py  add_capability_refresh_fields.py  add_capability_review_and_access_audit.py  add_clearance_certificates.py  add_client_dates.py  add_communication_audits.py  add_communication_logs.py  add_compliance_certificate_to_profile.py  add_crm_leads_opportunities.py  add_custom_reports.py  add_debrief_notes_to_program_closure.py  add_deliverable_templates.py  (+72 more)
backend/app/: main.py
backend/app/api/: deps.py  websocket.py  ws_connection.py
backend/app/core/: api_auth.py  audit_chain.py  audit_context.py  audit_listener.py  config.py  crypto.py  exceptions.py  file_crypto.py  http_client.py  ip_utils.py  logging.py  pixel.py  rate_limit.py  secret_vault.py  security.py
backend/app/db/: base.py  encrypted_json.py  encrypted_type.py  seed.py  seed_demo.py  session.py
backend/app/middleware/: audit.py  cloudflare_origin.py  csrf.py  logging_context.py  security.py
backend/app/models/: __init__.py  access_audit.py  api_key.py  approval.py  approval_comment.py  audit_checkpoint.py  audit_log.py  bookmark.py  break_glass_request.py  budget_approval.py  calendar.py  calendar_feed_token.py  capability_review.py  clearance_certificate.py  client.py  client_profile.py  communication.py  communication_audit.py  communication_log.py  communication_template.py  consent_log.py  conversation.py  crm_activity.py  custom_report.py  dashboard_config.py  decision_request.py  deletion_request.py  deliverable.py  deliverable_template.py  device_session.py  document.py  document_acknowledgment.py  document_delivery.py  document_request.py  document_share.py  download_token.py  enums.py  envelope.py  erasure_request.py  escalation.py  (+53 more)
backend/app/schemas/: __init__.py  access_audit.py  analytics.py  api_key.py  approval.py  audit_log.py  auth.py  base.py  bookmark.py  budget_approval.py  calendar.py  calendar_feed.py  capability_review.py  clearance_certificate.py  client.py  client_preferences.py  client_profile.py  client_timeline.py  communication.py  communication_audit.py  communication_log.py  communication_template.py  conversation.py  crm_activity.py  custom_report.py  dashboard.py  dashboard_config.py  decision_request.py  deletion_request.py  deliverable.py  deliverable_template.py  document.py  document_delivery.py  document_request.py  document_share.py  docusign.py  envelope.py  escalation.py  escalation_playbook.py  escalation_rule.py  (+52 more)
backend/app/services/: access_audit_service.py  archival_service.py  audio_service.py  audit_service.py  auto_dispatch_assignments.py  auto_dispatch_programs.py  auto_dispatch_service.py  (+90 more)
backend/scripts/: backfill_encrypted_documents.py  backup_encrypted.py  dump_openapi.py  seed_demo.py  seed_demo_data.py
backend/tests/: conftest.py  test_access_audits.py  test_api_auth.py  test_auth.py  test_budget_approvals.py  test_certificates.py  test_client_portal.py  test_clients.py  test_closure.py  test_communications.py  test_crm_activities.py  test_dashboard.py  test_deliverables.py  test_documents.py  test_enums.py  test_escalations.py  test_exceptions.py  test_http_client.py  test_integration_workflows.py  test_kyc_documents.py  test_leads.py  test_logging.py  test_mfa_service.py  test_notifications.py  test_nps_surveys.py  test_opportunities.py  test_partner_portal.py  test_partners.py  test_password_validation.py  test_programs.py  test_rbac.py  test_reports.py  test_risk_scoring.py  test_scheduling.py  test_schemas.py  test_security.py  test_sla.py  test_sla_service.py  test_tasks.py  test_travel.py  (+2 more)
(+1222 files in other folders)
