[project]
name = "amg-portal-backend"
version = "0.1.0"
description = "AMG Client & Partner Portal — FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI + ASGI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "websockets>=12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    # Redis
    "redis>=5.2.0",
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Authentication
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # Argon2id password hashing (Phase 1.6). Previously pulled in transitively via
    # minio; declare explicitly so an upstream minio change cannot silently break
    # password hashing.
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.17",
    # Email
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Object Storage (S3-compatible / MinIO)
    "minio>=7.2.0",
    # MFA / TOTP
    "cryptography>=41.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    # Utilities
    "cachetools>=5.3.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # PDF generation
    "weasyprint>=62.0",
    # Google Calendar
    "google-api-python-client>=2.155.0",
    "google-auth>=2.37.0",
    # DocuSign eSignature
    "docusign-esign>=3.25.0",
    # File type detection via magic bytes (no libmagic system dependency)
    "filetype>=1.2.0",
    # Excel file parsing
    "openpyxl>=3.1.0",
    # Body-size enforcement (ASGI middleware, pre-handler rejection)
    "content-size-limit-asgi>=0.1.5",
    # RFC-3161 timestamp authority client (audit chain Phase 1.13 anchor)
    "rfc3161ng>=2.1.3",
    # FIDO2 / WebAuthn passkey support (Phase 2.9)
    "webauthn>=2.7.0",
    # S3-compatible upload for the encrypted off-platform backup (Phase 3.12).
    # Boto3 talks to AWS S3, Cloudflare R2 and Backblaze B2 via endpoint_url.
    "boto3>=1.36.0",
    "ez-pixel>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PLR"]
ignore = ["PLR0913", "PLR2004", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "types-cachetools>=5.3.0",
]
